fix:adjust mobile search size to prevent spill

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,7 +38,7 @@ header {
 }
 
 .mobile-search {
-    width: 100vw !important;
+    width: 60vw !important;
 }
 
 /* Landing Page Styling */
